Task1: add rabbit mq username for kubernetes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.mail.password=mzrhoiqpjwcrtjxt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.rabbitmq.password=3BJLqH4bbt
+spring.rabbitmq.username=user
