--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-amqp:2.5.3'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.springframework.boot:spring-boot-starter-mail:2.3.12.RELEASE'
-    implementation 'org.springframework:spring-context-support:5.2.16.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp:2.5.4'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-starter-mail:2.5.4'
+    implementation 'org.springframework:spring-context-support:5.3.9'
 
 
 }
