Task1: add new account model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.rabbitmq.password=3BJLqH4bbt
 spring.rabbitmq.username=user
+spring.rabbitmq.addresses=rabbit-rabbitmq.development.svc.cluster.local:5672
