--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ repositories {
 }
 
 dependencies {
+    implementation('io.springfox:springfox-swagger2:3.0.0')
+    implementation('io.springfox:springfox-swagger-ui:3.0.0')
     implementation 'org.springframework.boot:spring-boot-starter-websocket:2.5.4'
     implementation 'org.springframework.boot:spring-boot-starter-amqp:2.5.4'
     compileOnly 'org.projectlombok:lombok:1.18.20'
@@ -26,6 +28,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
     implementation 'org.springframework.boot:spring-boot-starter-mail:2.5.4'
     implementation 'org.springframework:spring-context-support:5.3.9'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.4'
 
 
 }
