task3: add xazar config

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,10 +1,10 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ykbanktech@gmail.com
-spring.mail.password=mzrhoiqpjwcrtjxt
+spring.mail.username=xazar.tv.22@gmail.com
+spring.mail.password=jtlsdromseocpqpt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.rabbitmq.password=CUpC6BLLTD
 spring.rabbitmq.username=user
-spring.rabbitmq.addresses=xazar-rabbitmq.default.svc.cluster.local:5672
+spring.rabbitmq.addresses=localhost:5672
