task4: add xazar mail sender and edit k8s files

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,10 +1,13 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=xazar.tv.22@gmail.com
-spring.mail.password=jtlsdromseocpqpt
+spring.mail.username=email address
+spring.mail.password=password token
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.rabbitmq.password=CUpC6BLLTD
-spring.rabbitmq.username=user
+spring.rabbitmq.password=rabbit pass
+spring.rabbitmq.username=rabbit user
 spring.rabbitmq.addresses=localhost:5672
+
+
+server.port=8054
