--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=ykbanktech@gmail.com
-spring.mail.password=mzrhoiqpjwcrtjxt
+spring.mail.host=${EMAIL_HOST}
+spring.mail.port=${EMAIL_PORT}
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.rabbitmq.password=CUpC6BLLTD
-spring.rabbitmq.username=user
-spring.rabbitmq.addresses=xazar-rabbitmq.default.svc.cluster.local:5672
+spring.rabbitmq.password=${RABBIT_PASSWORD}
+spring.rabbitmq.username=${RABBIT_USERNAME}
+spring.rabbitmq.addresses=${RABBIT_ADDRESS}
+
+server.port=${DB_MS_EMAIL_PORT}
